# spike2py

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
docs/source/pages/: how_to_guides.rst  tutorials.rst
scripts/: 01_bla.py
spike2py/: ABC.py  __init__.py  channels.py  demo.py  enums.py  plot.py  read.py  trial.py
tests/: conftest.py  test_change_trial.py  test_channels.py  test_demo.py  test_figures.py  test_read.py  test_trial.py
