[tool.poetry]
name = "spike2py"
version = "0.1.1"
description = ""
authors = ["Björn Nadrowski <bjrnfrdnnd@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pytest = "^6.2.5"
numpy = "^1.22.1"
scipy = "^1.7.3"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
